--- a/case_study_1022/Case Study 1022 Solution.ipynb
+++ b/case_study_1022/Case Study 1022 Solution.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is for "
+    "This notebook is for Part 2 - Applications of the Case Study"
    ]
   },
   {
@@ -12370,9 +12370,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Merge Quindio map with Colombia Output Data"
    ]
@@ -12384,8 +12382,7 @@
     "ExecuteTime": {
      "end_time": "2022-10-23T15:42:49.950337Z",
      "start_time": "2022-10-23T15:42:49.932086Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -12401,8 +12398,7 @@
     "ExecuteTime": {
      "end_time": "2022-10-23T15:43:08.050445Z",
      "start_time": "2022-10-23T15:43:08.046574Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -12429,7 +12425,6 @@
      "end_time": "2022-10-23T17:09:34.801868Z",
      "start_time": "2022-10-23T17:09:34.725456Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -12857,6 +12852,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exrcise 4 Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below are the side-by-side comparisons of the predicted populations for the ADM2 level for Quindio.\n",
+    "The XGB model seems to have better performance over the LightGBM model.\n",
+    "The prediction for Filandia's population is noted as the worst overestimate. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 578,
    "metadata": {
@@ -12864,7 +12875,9 @@
      "end_time": "2022-10-23T17:52:34.679701Z",
      "start_time": "2022-10-23T17:52:33.286879Z"
     },
-    "hidden": true
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
@@ -12881,6 +12894,7 @@
     }
    ],
    "source": [
+    "# Plot \n",
     "fig, (ax1, ax2, ax3) = plt.subplots(ncols=3, sharex=True, sharey=True, figsize=(25, 35))\n",
     "gdf_quindio_data.plot(ax=ax1, column=\"raster_pop_100\", \n",
     "                 scheme='QUANTILES', k=10,\n",
@@ -12917,8 +12931,7 @@
     },
     "code_folding": [
      0
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [
     {
